--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,16 @@ p {
   color: #595959;
   font-family: "Lucida Console", "Courier New", monospace;
 }
-img {
-  width: 400px;
-  height: 400px;
-}
 #darkRed {
   color: #31081f;
+}
+p.powers {
+  color: #d80d0d;
+}
+div img {
+  width: 800px;
+  height: 400px;
+}
+ul li {
+  font-family: "Lucida Console", "Courier New", monospace;
 }
