--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,21 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   color: #31081f;
 }
+h1.page2 {
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #631a43;
+}
+h1.page3 {
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #6e3053;
+}
+h1.page4 {
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #a35883;
+}
 a {
   color: #6b0f1a;
   font-family: "Lucida Console", "Courier New", monospace;
